[ZMC-93] Update user endpoint
