# controller/userController.go
@@ -6,6 +6,7 @@ import (
 	"zuck-my-clothe/zuck-my-clothe-backend/usecases"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt/v5"
 )
 
 type UserController interface {
@@ -13,6 +14,8 @@ type UserController interface {
 	GetAll(c *fiber.Ctx) error
 	GetBranchEmployee(c *fiber.Ctx) error
 	GetAllManager(c *fiber.Ctx) error
+	UpdateUser(c *fiber.Ctx) error
+	UpdateUserPassword(c *fiber.Ctx) error
 	DeleteUser(c *fiber.Ctx) error
 }
 
@@ -25,16 +28,16 @@ func CreateNewUserController(usecase usecases.UserUsecases, config *config.Confi
 	return &userController{usecase: usecase, config: config}
 }
 
-// @Summary		Create new user
-// @Description	Create a new user by using User model
-// @Tags			Users
-// @Produce		json
-// @Accept			json
-// @Param			UserModel	body	model.UserDTO	true	"New User Data"
-// @Success		201
-// @Failure		403	{string}	string	"Forbidden"
-// @Failure		406	{string}	string	"Not Acceptable"
-// @Router			/users/ [POST]
+//	@Summary		Create new user
+//	@Description	Create a new user by using User model
+//	@Tags			Users
+//	@Produce		json
+//	@Accept			json
+//	@Param			UserModel	body	model.UserDTO	true	"New User Data"
+//	@Success		201
+//	@Failure		403	{string}	string	"Forbidden"
+//	@Failure		406	{string}	string	"Not Acceptable"
+//	@Router			/users/ [POST]
 func (controller *userController) CreateUser(c *fiber.Ctx) error {
 	body := new(model.UserDTO)
 	if err := c.BodyParser(body); err != nil {
@@ -57,13 +60,13 @@ func (controller *userController) CreateUser(c *fiber.Ctx) error {
 	return c.SendStatus(fiber.StatusCreated)
 }
 
-// @Summary		Get all users
-// @Description	Retrieve all users from the database
-// @Tags			Users
-// @Produce		json
-// @Success		200	{array}		model.UserBranch[]
-// @Failure		500	{string}	string	"Internal Server Error"
-// @Router			/users/all [get]
+//	@Summary		Get all users
+//	@Description	Retrieve all users from the database
+//	@Tags			Users
+//	@Produce		json
+//	@Success		200	{array}		model.UserBranch[]
+//	@Failure		500	{string}	string	"Internal Server Error"
+//	@Router			/users/all [get]
 func (controller *userController) GetAll(c *fiber.Ctx) error {
 	users, err := controller.usecase.GetAll()
 	if err != nil {
@@ -72,14 +75,14 @@ func (controller *userController) GetAll(c *fiber.Ctx) error {
 	return c.JSON(users)
 }
 
-// @Summary		Get employees by branch ID
-// @Description	Get employees by branch ID
-// @Tags			Users
-// @Param			branch_id	path		string	true	"Branch ID"
-// @Success		200			{array}		model.UserContract
-// @Failure		204			{string}	string	"No Content"
-// @Failure		500			{string}	string	"Internal Server Error"
-// @Router			/users/branch/{branch_id} [get]
+//	@Summary		Get employees by branch ID
+//	@Description	Get employees by branch ID
+//	@Tags			Users
+//	@Param			branch_id	path		string	true	"Branch ID"
+//	@Success		200			{array}		model.UserContract
+//	@Failure		204			{string}	string	"No Content"
+//	@Failure		500			{string}	string	"Internal Server Error"
+//	@Router			/users/branch/{branch_id} [get]
 func (controller *userController) GetBranchEmployee(c *fiber.Ctx) error {
 	branchId := c.Params("branch_id")
 	users, err := controller.usecase.GetBranchEmployee(branchId)
@@ -93,14 +96,14 @@ func (controller *userController) GetBranchEmployee(c *fiber.Ctx) error {
 	return c.JSON(users)
 }
 
-// @Summary		Get all managers
-// @Description	Get a list of all managers
-// @Tags			Users
-// @Accept			json
-// @Produce		json
-// @Success		200	{array}		model.Users[]
-// @Failure		500	{string}	string	"Internal Server Error"
-// @Router			/users/manager/all [get]
+//	@Summary		Get all managers
+//	@Description	Get a list of all managers
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{array}		model.Users[]
+//	@Failure		500	{string}	string	"Internal Server Error"
+//	@Router			/users/manager/all [get]
 func (controller *userController) GetAllManager(c *fiber.Ctx) error {
 	user, err := controller.usecase.GetAllManager()
 	if err != nil {
@@ -109,15 +112,15 @@ func (controller *userController) GetAllManager(c *fiber.Ctx) error {
 	return c.JSON(user)
 }
 
-// @Summary		Delete user
-// @Description	Delete a user by ID
-// @Tags			Users
-// @Accept			json
-// @Produce		json
-// @Param			id	path		string	true	"User ID"
-// @Success		200	{struct}	model.Users
-// @Failure		500	{string}	string	"Internal Server Error"
-// @Router			/users/:id [delete]
+//	@Summary		Delete user
+//	@Description	Delete a user by ID
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"User ID"
+//	@Success		200	{struct}	model.Users
+//	@Failure		500	{string}	string	"Internal Server Error"
+//	@Router			/users/:id [delete]
 func (controller *userController) DeleteUser(c *fiber.Ctx) error {
 	userID := c.Params("id")
 	deletedUser, err := controller.usecase.DeleteUser(userID)
@@ -129,4 +132,82 @@ func (controller *userController) DeleteUser(c *fiber.Ctx) error {
 		}
 	}
 	return c.Status(fiber.StatusOK).JSON(deletedUser)
+}
+
+//	@Summary		Update user
+//	@Description	Update user details by ID
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		string				true	"User ID"
+//	@Param			User	body		model.UserUpdateDTO	true	"Updated User Data"
+//	@Success		200		{object}	model.Users
+//	@Failure		403		{string}	string	"Forbidden"
+//	@Failure		406		{string}	string	"Not Acceptable"
+//	@Failure		500		{string}	string	"Internal Server Error"
+//	@Router			/users/{id} [patch]
+func (contr *userController) UpdateUser(c *fiber.Ctx) error {
+	userID := c.Params("id")
+
+	token := c.Locals("user").(*jwt.Token)
+	claims := token.Claims.(jwt.MapClaims)
+	tokenUserID := claims["userID"].(string)
+	role := claims["positionID"].(string)
+
+	body := new(model.UserUpdateDTO)
+	if err := c.BodyParser(body); err != nil {
+		return c.Status(fiber.StatusNotAcceptable).SendString(err.Error())
+	}
+
+	if role != string(model.SuperAdmin) && userID != tokenUserID {
+		return c.Status(fiber.StatusForbidden).SendString("You are not allowed to update")
+	}
+
+	err := contr.usecase.UpdateUser(userID, *body, role)
+
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).SendString(err.Error())
+	}
+
+	return c.SendStatus(fiber.StatusOK)
+
+}
+
+// UpdateUserPassword handles the request to update a user's password.
+//	@Summary		Update user password
+//	@Description	Update the password of a user by their ID
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		string						true	"User ID"
+//	@Param			body	body		model.UserUpdatePasswordDTO	true	"New password data"
+//	@Success		200		{string}	string						"Password updated successfully"
+//	@Failure		403		{string}	string						"You are not allowed to update"
+//	@Failure		406		{string}	string						"Invalid request body"
+//	@Failure		500		{string}	string						"Internal server error"
+//	@Router			/users/{id}/password [patch]
+func (contr *userController) UpdateUserPassword(c *fiber.Ctx) error {
+	userID := c.Params("id")
+
+	token := c.Locals("user").(*jwt.Token)
+	claims := token.Claims.(jwt.MapClaims)
+	tokenUserID := claims["userID"].(string)
+	role := claims["positionID"].(string)
+
+	body := new(model.UserUpdatePasswordDTO)
+	if err := c.BodyParser(body); err != nil {
+		return c.Status(fiber.StatusNotAcceptable).SendString(err.Error())
+	}
+
+	if role != string(model.SuperAdmin) && userID != tokenUserID {
+		return c.Status(fiber.StatusForbidden).SendString("You are not allowed to update")
+	}
+
+	err := contr.usecase.UpdateUserPassword(userID, *body)
+
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).SendString(err.Error())
+	}
+
+	return c.SendStatus(fiber.StatusOK)
 }
